[package]
name = "astra"
version = "0.1.0"
edition = "2021"
authors = ["exa04 <223230@pm.me>"]

[workspace]
resolver = "2"
members = [
    "xtask",
    "examples/all_views",
]

[lib]
doctest = false

[dependencies]
grass = { version = "0.13.4", features = ["macro"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
